* Thu Oct 11 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.2.0-0
- Added $dracut_ensure, $fipscheck_ensure and $nss_ensure parameters
  - Changed the packages from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`

* Thu Jul 12 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.2.0-0
- Added support for OEL and Puppet 5
- Add a message to the reboot_notify resource to be more helpful

* Mon Feb 26 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.4-0
- Updated testing configurations including GCE suite information,
 .travis.yml and .gitab-ci.yml.

* Sat Sep 30 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.3-0
- Updated to latest augeasproviders_grub version.  New module
  had no functionality impacts.

* Fri May 12 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.2-0
- Including the FIPS module was causing FIPS mode to be enabled by default.
  This had high potential for causing issues, as evidenced by our acceptance
  tests, so we now mirror the 'enabled' state of the module based on whether or
  not FIPS is already enabled on the target system.
- Update puppet dependency in metadata.json

* Fri May 05 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.2-0
- Created a work-around for an undocumented issue where /boot is not
  on its own partition but is added to the kernel parameters with
  fips=1. This situation ends up creating a kernel panic on the
  system until the boot= entry is removed from the kernel boot line.
- Added tests against GCE since that is the default image configuration
  on those systems.

* Thu Mar 23 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.1.1-0
- The simp_options::fips catalyst did not disable fips; changed enable
  variable to default to simp_options::fips
- Moved check for OS family from params to init
- Added package remove for dracut-fips packages if fips is disabled