@@ -48,6 +48,7 @@ jobs:
 
   include:
     - stage: check
+      name: 'Syntax, style, and validation checks'
       rvm: 2.4.4
       env: PUPPET_VERSION="~> 5.5"
       script:
@@ -59,6 +60,7 @@ jobs:
         - bundle exec rake pkg:create_tag_changelog
         - bundle exec rake lint
         - bundle exec puppet module build
+
     - stage: spec
       name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
       rvm: 2.1.9
@@ -90,7 +92,7 @@ jobs:
     - stage: spec
       name: 'Latest Puppet 6.x (allowed to fail)'
       rvm: 2.5.1
-      env: PUPPET_VERSION="~>6.0"
+      env: PUPPET_VERSION="~> 6.0"
       script:
         - bundle exec rake spec
 
